--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <!--Añadir Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
         <!-- Estilos propios -->
         <link rel="stylesheet" href="css/estilos.css">
@@ -11,17 +12,19 @@
         <div class="container-fluid">
             <!-- Fila navbar -->
             <div class="row">
-                <nav class="navbar fixed-top navbar-expand-lg">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a href="#" class="navbar-brand">Inicio</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <div class="navbar-nav">
-                                <a href="#" class="nav-link"></a>
-                                <a href="#" class="nav-link"></a>
-                                <a href="#" class="nav-link"></a>
+                                <ul class="navbar-nav">
+                                    <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">Galería</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
