--- a/index.html
+++ b/index.html
@@ -1,108 +1,158 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!--Añadir Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+	<head>
+		<!--Añadir Bootstrap-->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-        <!-- Estilos propios -->
-        <link rel="stylesheet" href="css/estilos.css">
-    </head>
-    <body>
-        <div class="container-fluid">
-            <!-- Fila navbar -->
-            <div class="row">
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <div class="navbar-nav">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                                    <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
-                                    <li class="nav-item"><a href="#" class="nav-link">Galería</a></li>
-                                    <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <!-- Fila Carousel -->
-            <div class="row">
-                <!-- Carousel-->
-                <div class="col-md-12 col-lg-9"></div>
-                <!-- Descripción Carousel -->
-                <div class="col-md-12 col-lg-3"></div>
-            </div>
+		<!-- Iconos Bootstrap -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-            <!-- Fila perfiles -->
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="..." alt="" class="card-img-top" />
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+		<!-- Estilos propios -->
+		<link rel="stylesheet" href="css/estilos.css">
+	</head>
+	<body>
+		<div class="container-fluid">
+			<!-- Fila navbar -->
+			<div class="row">
+				<nav class="navbar navbar-expand-lg">
+					<div class="container-fluid">
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarNav">
+							<div class="navbar-nav">
+								<ul class="navbar-nav">
+									<li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
+									<li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
+									<li class="nav-item"><a href="#" class="nav-link">Galería</a></li>
+									<li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<!-- Fila Carousel -->
+			<div class="row">
+				<!-- Carousel-->
+				<div class="col-md-12 col-lg-8">
+					<div id="carouselPrincipal" class="carousel slide">
+						<div class="carousel-indicators">
+							<button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+							<button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="1" aria-label="Slide 2"></button>
+							<button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="2" aria-label="Slide 3"></button>
+						</div>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="img/Carrusel1.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/Carrusel2.jpg" class="d-block w-100" alt="...">
+							</div>
+							<div class="carousel-item">
+								<img src="img/Carrusel3.jpg" class="d-block w-100" alt="...">
+							</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+				<!-- Descripción Carousel -->
+				<div class="col-md-12 col-lg-4">
+					<div id="descripcion-sitio">
+						<h1>IMAGINA</h1>
+						<h3>Magia y teatro</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus assumenda aspernatur deleniti quas dolorum fuga eius eaque illum consectetur quidem, rem corrupti maxime iste quaerat ut rerum, asperiores sit.</p>
+						<button class="btn btn-secondary">Contáctanos</button>
+					</div>
+				</div>
+			</div>
 
-            <!-- Footer -->
-            <footer>
-                
-            </footer>
+			<!-- Fila perfiles -->
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Cristina.png" alt="Cristina" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Cristina</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Cesar.png" alt="Cesar" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Cesar</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Isabel.png" alt="Isabel" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Isabel</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Monica.png" alt="Mónica" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Mónica</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Sergio.png" alt="Sergio" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Sergio</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4">
+					<div class="card">
+						<img src="img/Bruno.png" alt="Bruno" class="card-img-top" />
+						<div class="card-body">
+							<h5 class="card-title">Bruno</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
-        </div>
-    </body>
+			<!-- Footer -->
+			<footer class="row">
+				<div class="d-flex justify-content-center">
+					<a href="#"><i class="bi-facebook iconos"></i> </a>
+					<a href="#"><i class="bi-instagram iconos"></i></a>
+					<a href="#"><i class="bi-youtube iconos"></i></a>
+				</div>
+				<hr class="footer-divisor">
+				</hr>
+					<div class="col-12">
+						<i class="bi-heart-fill iconos"></i>
+					</div>
+					<div class="col-12">
+						<p>Desarrollado por Jorge Vicuña</p>
+					</div>
+
+			</footer>
+
+		</div>
+	</body>
 </html>
