Corrección colores, tamaños cartas, enlace repositorio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container-fluid">
 			<!-- Fila navbar -->
 			<div class="row">
-				<nav class="navbar navbar-expand-lg">
+				<nav class="navbar navbar-expand-lg bg-body-tertiary">
 					<div class="container-fluid">
 						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
@@ -78,9 +78,9 @@
 			</div>
 
 			<!-- Fila perfiles -->
-			<div class="row">
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+			<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-2">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Cristina.png" alt="Cristina" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Cristina</h5>
@@ -88,8 +88,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Cesar.png" alt="Cesar" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Cesar</h5>
@@ -97,8 +97,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Isabel.png" alt="Isabel" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Isabel</h5>
@@ -106,8 +106,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Monica.png" alt="Mónica" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Mónica</h5>
@@ -115,8 +115,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Sergio.png" alt="Sergio" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Sergio</h5>
@@ -124,8 +124,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col">
+					<div class="card h-100">
 						<img src="img/Bruno.png" alt="Bruno" class="card-img-top" />
 						<div class="card-body">
 							<h5 class="card-title">Bruno</h5>
@@ -138,9 +138,9 @@
 			<!-- Footer -->
 			<footer class="row">
 				<div class="d-flex justify-content-center">
-					<a href="#"><i class="bi-facebook iconos"></i> </a>
-					<a href="#"><i class="bi-instagram iconos"></i></a>
-					<a href="#"><i class="bi-youtube iconos"></i></a>
+					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-facebook iconos"></i> </a>
+					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-instagram iconos"></i></a>
+					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-youtube iconos"></i></a>
 				</div>
 				<hr class="footer-divisor">
 				</hr>
