Cambiados enlaces íconos footer
Ahora solo el corazón lleva al repositorio.
Se dehabilitaron los botones placeholder de redes sociales

--- a/index.html
+++ b/index.html
@@ -138,14 +138,16 @@
 			<!-- Footer -->
 			<footer class="row">
 				<div class="d-flex justify-content-center">
-					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-facebook iconos"></i> </a>
-					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-instagram iconos"></i></a>
-					<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE"><i class="bi-youtube iconos"></i></a>
+					<i class="bi-facebook iconos"></i> 
+					<i class="bi-instagram iconos"></i>
+					<i class="bi-youtube iconos"></i>
 				</div>
 				<hr class="footer-divisor">
 				</hr>
 					<div class="col-12">
-						<i class="bi-heart-fill iconos"></i>
+						<a href="https://github.com/jvicu2001/CER1-VICU-AJORGE">
+							<i class="bi-heart-fill iconos"></i>
+						</a>
 					</div>
 					<div class="col-12">
 						<p>Desarrollado por Jorge Vicuña</p>
